[gd_scene load_steps=10 format=3 uid="uid://ebhniy7bxs5q"]

[ext_resource type="Script" path="res://scenes/game_scene.gd" id="1_5dox4"]
[ext_resource type="PackedScene" uid="uid://dgkurtqfaxxdy" path="res://scenes/plate.tscn" id="1_xjeqg"]
[ext_resource type="PackedScene" uid="uid://dl8o0ww68pdnc" path="res://scenes/ui/game_ui.tscn" id="2_4v302"]
[ext_resource type="PackedScene" uid="uid://df2kgejm7rsht" path="res://scenes/ball.tscn" id="3_01vlo"]
[ext_resource type="PackedScene" uid="uid://cdb6qvow0ks0l" path="res://scenes/ui/menus/pause_menu.tscn" id="3_ehuej"]
[ext_resource type="Texture2D" uid="uid://brasy7i4r1b3f" path="res://assets/backgrounds/bg-game.svg" id="4_s1jbr"]
[ext_resource type="PackedScene" uid="uid://dtsymmp0v4rko" path="res://scenes/borders_for_plates.tscn" id="5_bdaoq"]
[ext_resource type="PackedScene" uid="uid://ghu0wye0o0bc" path="res://scenes/borders_for_ball.tscn" id="7_6pat4"]
[ext_resource type="PackedScene" uid="uid://bwogofkspp4oc" path="res://scenes/end_game_area.tscn" id="8_8gko7"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_5dox4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" parent="CanvasLayer" instance=ExtResource("2_4v302")]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 327)
scale = Vector2(0.558196, 0.493935)
texture = ExtResource("4_s1jbr")

[node name="BallStartPosition" type="Marker2D" parent="."]
position = Vector2(578, 322)
metadata/_edit_lock_ = true

[node name="Ball" parent="." instance=ExtResource("3_01vlo")]
z_index = 2
position = Vector2(576, 320)
collision_mask = 9

[node name="LPlateStartPosition" type="Marker2D" parent="."]
position = Vector2(160, 320)
metadata/_edit_lock_ = true

[node name="RPlateStartPosition" type="Marker2D" parent="."]
position = Vector2(992, 320)
metadata/_edit_lock_ = true

[node name="PlateLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="RPlate" parent="PlateLayer" instance=ExtResource("1_xjeqg")]
position = Vector2(984, 328)
plate_position = 1

[node name="LPlate" parent="PlateLayer" instance=ExtResource("1_xjeqg")]
position = Vector2(157, 327)
rotation = 3.14159

[node name="BordersForPlates" parent="." instance=ExtResource("5_bdaoq")]
position = Vector2(0, -16)

[node name="BordersForPlates2" parent="." instance=ExtResource("5_bdaoq")]
position = Vector2(0, 608)

[node name="BordersForBall" parent="." instance=ExtResource("7_6pat4")]
position = Vector2(0, -16)
collision_layer = 8

[node name="BordersForBall2" parent="." instance=ExtResource("7_6pat4")]
position = Vector2(0, 664)
collision_layer = 8

[node name="EndGameArea" parent="." instance=ExtResource("8_8gko7")]
position = Vector2(8, 16)

[node name="EndGameArea2" parent="." instance=ExtResource("8_8gko7")]
position = Vector2(1080, 8)
pos = 1

[node name="PauseMenu" parent="." instance=ExtResource("3_ehuej")]
unique_name_in_owner = true
visible = false

[connection signal="input_event" from="Ball" to="Ball" method="_on_input_event"]
[connection signal="llose" from="EndGameArea" to="." method="_on_end_game_area_llose"]
[connection signal="rlose" from="EndGameArea2" to="." method="_on_end_game_area_2_rlose"]
[connection signal="pressed" from="PauseMenu/ColorRect/MarginContainer/VBoxContainer/MarginContainer2/ButtonContainer/Quit" to="PlateLayer/RPlate" method="_on_quit_pressed"]

[editable path="PauseMenu"]
